Bug-fixes and Alignments

--- a/Services-main/styles.css
+++ b/Services-main/styles.css
@@ -368,20 +368,20 @@ p {
 
 .video-content img {
     
-    width: 150%;
+    width: 120%;
     border-radius: 10px;
 }
 
 .play-button {
     position: absolute;
     top: 50%;
-    left: 80%;
+    left: 60%;
     transform: translate(-50%, -50%);
     background-color: #000000b3;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
-    border-radius: 50%;
+    border-radius: 10%;
     cursor: pointer;
     font-size: 16px;
 }
